Рефактор 4: BotMenuServiceImpl